--- a/World_Happiness_Project.ipynb
+++ b/World_Happiness_Project.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd            #Importing the required library\n",
+    "import pandas as pd            #Importing the required libraries\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
